--- a/requirements.txt
+++ b/requirements.txt
@@ -90,10 +90,10 @@ tensorboard-plugin-wit==1.8.1
 threadpoolctl==3.1.0
 tokenizers==0.13.2
 tomli==2.0.1
-torch==1.13.1+cpu
-torchaudio==0.13.1+cpu
+# torch==1.13.1+cpu
+# torchaudio==0.13.1+cpu
 torchmetrics==0.2.0
-torchvision==0.14.1+cpu
+# torchvision==0.14.1+cpu
 tqdm==4.65.0
 typing_extensions==4.5.0
 urllib3==1.26.15
