--- a/arm64/requirements.txt
+++ b/arm64/requirements.txt
@@ -80,7 +80,7 @@ resampy==0.4.2
 rsa==4.9
 scikit-learn==1.2.2
 scipy==1.10.1
-# sherpa-onnx==1.3.0
+sherpa-onnx @ https://github.com/k2-fsa/sherpa-onnx/archive/refs/tags/v1.3.0.tar.gz
 six==1.16.0
 smart-open==6.3.0
 soundfile==0.12.1
@@ -90,10 +90,10 @@ tensorboard-plugin-wit==1.8.1
 threadpoolctl==3.1.0
 tokenizers==0.13.2
 tomli==2.0.1
-# torch==1.13.1+cpu
-# torchaudio==0.13.1+cpu
+torch @ https://download.pytorch.org/whl/torch-1.13.1-cp39-cp39-manylinux2014_aarch64.whl#sha256=2c3581a3fd81eb1f0f22997cddffea569fea53bafa372b2c0471db373b26aafc
+torchaudio @ https://download.pytorch.org/whl/torchaudio-0.13.1-cp39-cp39-manylinux2014_aarch64.whl#sha256=3023aeb5c191047bef1681a3741bffd4a2164b58a64cad24dd37da5e1ac2d1f1
 torchmetrics==0.2.0
-# torchvision==0.14.1+cpu
+torchvision @ https://download.pytorch.org/whl/torchvision-0.14.1-cp39-cp39-manylinux2014_aarch64.whl#sha256=eaed58cf454323ed9222d4e0dd5fb897064f454b400696e03a5200e65d3a1e76
 tqdm==4.65.0
 typing_extensions==4.5.0
 urllib3==1.26.15
